--- a/sport/templates/sport/base.html
+++ b/sport/templates/sport/base.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="page-header">
+        <a href="{% url 'competition_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         <h1><a href="/">sport</a></h1>
     </div>
     <div class="content container">
