--- a/sport/templates/sport/comp_detail.html
+++ b/sport/templates/sport/comp_detail.html
@@ -2,12 +2,17 @@
 
 {% block content %}
     <div class="comp">
-{#        {% if post.published_date %}#}
-            <div class="date">
-                {{ comp.event_date }}
-            </div>
-{#        {% endif %}#}
+        {#        {% if post.published_date %}#}
+        <div class="date">
+            {{ comp.event_date }}
+            {{ comp.event_time }}
+        </div>
+        {#        {% endif %}#}
+        {% if user.is_authenticated %}
+            <a class="btn btn-default" href="{% url 'comp_edit' pk=comp.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        {% endif %}
         <h1>{{ comp.name }}</h1>
-        <p>{{ comp.location|linebreaks }}</p>
+        <p>{{ comp.location }}</p>
+        <p>{{ comp.discipline }}</p>
     </div>
 {% endblock %}
