--- a/sport/templates/registration/registration_complete.html
+++ b/sport/templates/registration/registration_complete.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "sport/base.html" %}
+{% block title %}You are Registered{% endblock %}
+{% block content %}
 
-</body>
-</html>
+  <h2>Thank you for Registering</h2>
+  <p><a href="/accounts/login/">Please Login</a></p>
+
+{% endblock %}
