--- a/sport/templates/sport/base.html
+++ b/sport/templates/sport/base.html
@@ -3,10 +3,13 @@
 <html>
 <head>
     <title>sport</title>
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="{% static 'css/sport.css' %}">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="script.js"></script>
 </head>
 <body>
 {#<div class="page-header">#}
@@ -24,20 +27,32 @@
 {#</div>#}
 <div class="page-header">
     {% if user.is_authenticated %}
+        <a href="{% url 'django.contrib.auth.views.logout' %}" class="top-menu"><span class="glyphicon glyphicon-log-out"></span></a>
+        <p class="top-menu">Hello {{ user.username }} </p>
         <a href="{% url 'competition_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-        <p class="top-menu">Hello {{ user.username }}
-            <small>(<a href="{% url 'django.contrib.auth.views.logout' %}">Log out</a>)</small>
-        </p>
     {% else %}
-        <a href="{% url 'django.contrib.auth.views.login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+        <a href="{% url 'django.contrib.auth.views.login' %}" class="top-menu"><span class="glyphicon glyphicon-log-in"></span></a>
+        <a href="/accounts/register" class="top-menu"><span class="glyphicon glyphicon-plus-sign"></span></a>
     {% endif %}
-    <h1><a href="/">sport</a></h1>
+    <h1>my competition manager</h1>
 
 </div>
+
+<div id='cssmenu'>
+<ul>
+   <li class='active'><a href='/'><span>Home</span></a></li>
+   <li><a href='/sport/templates/sport/calendar.html'><span>Calendar</span></a></li>
+   <li><a href='#'><span>Statistics</span></a></li>
+   <li class='last'><a href='#'><span>Upcoming Events</span></a></li>
+</ul>
+</div>
+
 <div class="content container">
     <div class="row">
-        <div class="col-md-8">
+        <div class="container">
             {% block content %}
+
+
             {% endblock %}
         </div>
     </div>
