--- a/sport/templates/sport/base.html
+++ b/sport/templates/sport/base.html
@@ -39,12 +39,13 @@
 </div>
 
 <div id='cssmenu'>
-<ul>
-   <li class='active'><a href='/'><span>Home</span></a></li>
-   <li><a href='/sport/templates/sport/calendar.html'><span>Calendar</span></a></li>
-   <li><a href='#'><span>Statistics</span></a></li>
-   <li class='last'><a href='#'><span>Upcoming Events</span></a></li>
-</ul>
+    <ul>
+        <li class='active'><a href='/'><span>Home</span></a></li>
+        <li><a href='/calendar'><span>Calendar</span></a></li>
+        <li><a href='/statistics'><span>Statistics</span></a></li>
+        <li><a href='/upcoming_events'><span>Upcoming Events</span></a></li>
+        <li class='last'><a href='/old_events'><span>Old Events</span></a></li>
+    </ul>
 </div>
 
 <div class="content container">
