--- a/sport/templates/sport/calendar.html
+++ b/sport/templates/sport/calendar.html
@@ -1,5 +1,5 @@
 {% extends 'sport/base.html' %}
-<link href="/static/css/calendar.css" type="text/css" rel="stylesheet" />
+{#<link href="/static/css/calendar.css" type="text/css" rel="stylesheet" />#}
 {% block content %}
 {{ calendar }}
 {% endblock %}
