--- a/sport/templates/sport/discipline_new.html
+++ b/sport/templates/sport/discipline_new.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+{% extends 'sport/base.html' %}
+
+{% block content %}
+
+    <form method="POST" class="post-form">
+        {% csrf_token %}
+
+        {{ form.as_p }}
+        <button type="submit" class="save btn btn-default">Save</button>
+
+    </form>
+{% endblock %}
