--- a/sport/templates/sport/base.html
+++ b/sport/templates/sport/base.html
@@ -12,29 +12,11 @@
     <script src="script.js"></script>
 </head>
 <body>
-{#<div class="page-header">#}
-{#    {% if user.is_authenticated %}#}
-{#        <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>#}
-{#        <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>#}
-{#        <p class="top-menu">Hello {{ user.username }}#}
-{#            <small>(<a href="{% url 'django.contrib.auth.views.logout' %}">Log out</a>)</small>#}
-{#        </p>#}
-{#    {% else %}#}
-{#        <a href="{% url 'django.contrib.auth.views.login' %}" class="top-menu"><span#}
-{#                class="glyphicon glyphicon-lock"></span></a>#}
-{#    {% endif %}#}
-{#    <h1><a href="{% url 'blog.views.post_list' %}">Django Girls</a></h1>#}
-{#</div>#}
 <div class="page-header">
     {% if user.is_authenticated %}
-        <a href="{% url 'django.contrib.auth.views.logout' %}" class="top-menu"><span class="glyphicon glyphicon-log-out"></span></a>
-        <p class="top-menu">Hello {{ user.username }} </p>
-        <a href="{% url 'competition_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-    {% else %}
-        <a href="{% url 'django.contrib.auth.views.login' %}" class="top-menu"><span class="glyphicon glyphicon-log-in"></span></a>
-        <a href="/accounts/register" class="top-menu"><span class="glyphicon glyphicon-plus-sign"></span></a>
+        <h2 class="top-menu">Hello {{ user.username }} </h2>
     {% endif %}
-    <h1>my competition manager</h1>
+    <h1>Activity tracker</h1>
 
 </div>
 
@@ -47,6 +29,31 @@
         <li><a href="{% url 'events_from_date' lower=False %}"><span>Upcoming Events</span></a></li>
         <li class='last'><a href="{% url 'events_from_date' lower=True %}"><span>Old Events</span></a></li>
     </ul>
+</div>
+
+<div id='rightpanel'>
+    {% if user.is_authenticated %}
+        <ul>
+            <li>
+                <a href="{% url 'competition_new' %}" title="New activity"><span class="glyphicon glyphicon-plus"></span></a>
+            </li>
+            <li><br/><br/><br/></li>
+            <li>
+                <a href="{% url 'django.contrib.auth.views.logout' %}" title="Log out"><span class="glyphicon glyphicon-log-out"></span></a>
+
+            </li>
+        </ul>
+    {% else %}
+        <ul>
+            <li>
+                <a href="{% url 'django.contrib.auth.views.login' %}" title="Log in"><span class="glyphicon glyphicon-log-in"></span></a>
+            </li>
+                        <li><br/><br/><br/></li>
+
+            <li><a href="/accounts/register" title="Register"><span class="glyphicon glyphicon-plus-sign"></span></a>
+            </li>
+        </ul>
+    {% endif %}
 </div>
 
 <div class="content container">
