--- a/sport/templates/sport/comp_detail.html
+++ b/sport/templates/sport/comp_detail.html
@@ -9,8 +9,10 @@
         </div>
         {#        {% endif %}#}
         {% if user.is_authenticated %}
-            <a class="btn btn-default" href="{% url 'comp_edit' pk=comp.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-            <a class="btn btn-default" href="{% url 'comp_remove' pk=comp.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+            <a href="{% url 'comp_edit' pk=comp.pk %}"><button class="dropbtn">Edit</button></a>
+
+            <a href="{% url 'comp_remove' pk=comp.pk %}"><button class="dropbtn">Remove</button></a>
+
 
         {% endif %}
         <h1>{{ comp.name }}</h1>
