--- a/sport/templates/sport/comp_edit.html
+++ b/sport/templates/sport/comp_edit.html
@@ -36,7 +36,7 @@
         {% csrf_token %}
 
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
+        <button class="dropbtn">save</button>
 
 
 
