--- a/sport/templates/sport/comp_detail.html
+++ b/sport/templates/sport/comp_detail.html
@@ -7,18 +7,25 @@
             {{ comp.event_date }}
             {{ comp.event_time }}
         </div>
-        {#        {% endif %}#}
-        {% if user.is_authenticated %}
-            <a href="{% url 'comp_edit' pk=comp.pk %}"><button class="dropbtn">Edit</button></a>
-
-            <a href="{% url 'comp_remove' pk=comp.pk %}"><button class="dropbtn">Remove</button></a>
-
-
-        {% endif %}
         <h1>{{ comp.name }}</h1>
         <p>date: {{ comp.event_date }}</p>
         <p>{{ comp.discipline }}</p>
         <p>distance: {{ comp.distance }}</p>
         <p>score: {{ comp.score }}</p>
     </div>
+{% endblock %}
+
+
+
+
+{% block rightcontent %}
+    <li>
+        <a href="{% url 'comp_edit' pk=comp.pk %}" title="Edit activity"><span class="glyphicon glyphicon-edit"></span></a>
+    </li>
+    <li><br/><br/></li>
+    <li>
+        <a href="{% url 'comp_remove' pk=comp.pk %}" title="Remove activity"><span class="glyphicon glyphicon-remove"></span></a>
+
+    </li>
+    <li><br/><br/><br/></li>
 {% endblock %}
