--- a/sport/static/css/sport.css
+++ b/sport/static/css/sport.css
@@ -251,6 +251,12 @@ th {
 
 .title-text {
     font: 100% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
+    color:black;
     font-size: large;
     font-weight: bold;
+}
+
+.content-text {
+    font: 100% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
+    font-size: medium;
 }
