before removing calendar

--- a/sport/templates/sport/competition_list.html
+++ b/sport/templates/sport/competition_list.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+    <div class="cont-text-bold">All activities</div>
+    <br/>
     <table style="width:100%" class="rows">
         <tr>
             <td>
