--- a/sport/templates/sport/disciplines.html
+++ b/sport/templates/sport/disciplines.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="cont-text">Choose discipline form listed below:<div/>
+<div class="cont-text">Choose discipline form listed below:</div>
     <br/>
     <div class="dropdown">
         <button class="dropbtn">------------</button>
@@ -15,7 +15,7 @@
     <br/>
     <br/>
     <br/>
-    <div class="cont-text">...or add new one:<div/>    <br/>
+    <div class="cont-text">...or add new one:</div>    <br/>
     <a href="{% url 'discipline_new' %}"><button class="dropbtn">Add new</button></a>
     <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 
