--- a/sport/templates/sport/summary.html
+++ b/sport/templates/sport/summary.html
@@ -3,8 +3,9 @@
 {% block content %}
 
 
-
-        <table style="width:100%" class="rows">
+    <div class="cont-text-bold">Summary of past activities</div>
+    <br/>
+    <table style="width:100%" class="rows">
         <tr class="first-row">
             <td>Discipline</td>
             <td>Number of activities</td>
@@ -20,7 +21,6 @@
             </tr>
         {% endfor %}
     </table>
-
 
 
 
