--- a/sport/static/css/sport.css
+++ b/sport/static/css/sport.css
@@ -97,7 +97,7 @@ h1, h2, h3, h4 {
 }
 
 #cssmenu a:hover {
-    background: black url("../images/hover.gif") left center no-repeat;
+    background: black;
     color: #fff;
     padding-bottom: 8px;
     display: flex;
@@ -135,7 +135,7 @@ h1, h2, h3, h4 {
 }
 
 #rightpanel a:hover {
-    background: black url("../images/hover.gif") left center no-repeat;
+    background: black;
     color: #fff;
     /*padding-bottom: 8px;*/
     display: flex;
@@ -147,7 +147,7 @@ h1, h2, h3, h4 {
     background-color: antiquewhite;
     position: relative;
     width: 65%;
-    height: 80%;
+    min-height: 400px;
     margin: 0;
     overflow: hidden;
     padding: 10px 30px;
@@ -164,10 +164,12 @@ h1, h2, h3, h4 {
 .dropbtn {
     background-color: #333;
     color: white;
-    padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
+    height: 30px;
+    width: 120px;
+    align-items: center;
 }
 
 .dropbtn:hover {
@@ -177,13 +179,17 @@ h1, h2, h3, h4 {
 .dropdown {
     position: relative;
     display: inline-block;
+    height: 30px;
+    width: 120px;
+    text-align: center;
+    align-items: center;
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 120px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
@@ -247,6 +253,12 @@ th {
 .cont-text {
     font: 100% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
     font-size: large;
+}
+
+.cont-text-bold {
+    font: 100% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
+    font-size: large;
+    font-weight: bold;
 }
 
 .title-text {
