--- a/sport/templates/sport/statistics.html
+++ b/sport/templates/sport/statistics.html
@@ -3,10 +3,10 @@
 {% block content %}
 
 
-        {% for key, values in competitions.items %}
-            <br/>
-            distance: <a href="{% url 'comp_list_for_dist' dist=key %}">{{ key }}</a>
-
-        {% endfor %}
+    {% for key, values in competitions.items %}
+        <br/>
+        distance: <a href="{% url 'comp_list_for_dist' dist=key %}">{{ key }}</a>
+        val: {{ values.0.discipline }}
+    {% endfor %}
 
 {% endblock %}
