before removing calendar

--- a/sport/templates/sport/base.html
+++ b/sport/templates/sport/base.html
@@ -20,14 +20,19 @@
 </div>
 
 <div id='cssmenu'>
-    <ul>
-        <li class='active'><a href='/'><span>Home</span></a></li>
-        <li><a href='/disciplines'><span>Disciplines</span></a></li>
-        <li><a href='/calendar'><span>Calendar</span></a></li>
-        <li><a href='/statistics'><span>Statistics</span></a></li>
-        <li><a href="{% url 'events_from_date' lower=False %}"><span>Upcoming Events</span></a></li>
-        <li class='last'><a href="{% url 'events_from_date' lower=True %}"><span>Old Events</span></a></li>
-    </ul>
+    {% if user.is_authenticated %}
+        <ul>
+            <li class='active'><a href='/'><span>Home</span></a></li>
+            <li><a href='/disciplines'><span>Disciplines</span></a></li>
+            <li><a href='/calendar'><span>Calendar</span></a></li>
+            <li><a href='/statistics'><span>Statistics</span></a></li>
+            <li><a href="{% url 'events_from_date' lower=False %}"><span>Upcoming Events</span></a></li>
+            <li class='last'><a href="{% url 'events_from_date' lower=True %}"><span>Old Events</span></a></li>
+        </ul>
+    {% else %}
+        <ul>
+        </ul>
+    {% endif %}
 </div>
 
 <div id='rightpanel'>
