--- a/sport/templates/sport/comp_detail.html
+++ b/sport/templates/sport/comp_detail.html
@@ -5,7 +5,7 @@
         <h1>{{ comp.name }}</h1>
         <p>date: {{ comp.event_date }}</p>
         <p>{{ comp.discipline }}</p>
-        <p>distance: {{ comp.distance }}</p>
+        <p>distance: {{ comp.distance_without_zeros }}</p>
         <p>score: {{ comp.score }}</p>
     </div>
 {% endblock %}
