--- a/sport/templates/sport/disciplines_list.html
+++ b/sport/templates/sport/disciplines_list.html
@@ -1,13 +1,17 @@
-
 {% extends 'sport/base.html' %}
 
 {% block content %}
 
 
-        {% for d in disciplines %}
-            <br/>
-            <a href="{% url 'comp_list_for_discipline' disc=d.name %}">{{ d.name }}</a>
-
-        {% endfor %}
+    <div class="cont-text">Choose discipline form listed below:</div>
+    <br/>
+    <div class="dropdown">
+        <button class="dropbtn">------------</button>
+        <div class="dropdown-content">
+            {% for d in disciplines %}
+                <a href="{% url 'comp_list_for_discipline' disc=d.name %}">{{ d.name }}</a>
+            {% endfor %}
+        </div>
+    </div>
 
 {% endblock %}
