--- a/sport/static/css/sport.css
+++ b/sport/static/css/sport.css
@@ -72,6 +72,7 @@ h1, h2, h3, h4 {
     padding: 0;
     width: 20%;
     float: left;
+    min-height: 400px;
 }
 
 #cssmenu li {
@@ -271,4 +272,12 @@ th {
 .content-text {
     font: 100% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
     font-size: medium;
+}
+
+.info-text {
+    font: 100% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
+    font-size: large;
+    font-weight: bold;
+    margin: 50px;
+    width: 100%;
 }
