--- a/sport/templates/sport/statistics_for_specific_dist.html
+++ b/sport/templates/sport/statistics_for_specific_dist.html
@@ -3,12 +3,12 @@
 {% block content %}
 
     <table style="width:100%">
-        <tr>
-            <td>date</td>
-            <td>discipline</td>
-            <td>name</td>
-            <td>distance</td>
-            <td>score</td>
+        <tr class="first-row">
+            <td>Date</td>
+            <td>Discipline</td>
+            <td>Name</td>
+            <td>Distance</td>
+            <td>Score</td>
             {#            link do notatek#}
         </tr>
         {% for comp in competitions %}
@@ -16,7 +16,7 @@
                 <td>{{ comp.event_date }}</td>
                 <td>{{ comp.discipline }}</td>
                 <td><a href="{% url 'comp_detail' pk=comp.pk %}">{{ comp.name }}</a></td>
-                <td>{{ comp.distance }}</td>
+                <td>{{ comp.distance_without_zeros }}</td>
                 <td>{{ comp.score }}</td>
                 {#            link do notatek#}
             </tr>
