--- a/sport/templates/sport/base.html
+++ b/sport/templates/sport/base.html
@@ -40,7 +40,10 @@
             {% block rightcontent %}
 
             {% endblock %}
-
+                <li>
+        <a href="{% url 'summary' %}" title="Show summary"><span class="glyphicon glyphicon-list-alt"></span></a>
+    </li>
+    <li><br/><br/></li>
             <li>
                 <a href="{% url 'competition_new' %}" title="New activity"><span class="glyphicon glyphicon-plus"></span></a>
             </li>
